manifests/base/vikunja/deploy-vikunja.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: vikunja
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 61005
        fsGroup: 61005
      containers:
        - name: vikunja
          image: vikunja
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 200m
              memory: 200Mi
          ports:
            - containerPort: 3456
          volumeMounts:
            - name: vikunja-data
              mountPath: /app/vikunja/files
              subPath: files
            - name: vikunja-data
              mountPath: /db
              subPath: db
            - name: vikunja-config
              mountPath: /app/vikunja/config.yml
              subPath: config.yml
            - name: updated-certs
              mountPath: /etc/ssl/certs/ca-certificates.crt
              subPath: ca-certificates.crt
      volumes:
        - name: vikunja-data
          persistentVolumeClaim:
            claimName: vikunja-data
        - name: vikunja-config
          secret:
            secretName: vikunja-config
        - name: domain-tls
          secret:
            secretName: domain-tls
        - name: updated-certs
          emptyDir: {}
