manifests/base/vikunja/svc-vikunja.yml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: vikunja
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3456
  selector:
    app: vikunja
